--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,23 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.beautydress.Activity.LoginActivity">
 
+    tools:context="com.example.beautydress.Activity.LoginActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:title="登录"
+        android:navigationIcon="@mipmap/yuike_button_xback_sp"
+        android:background="#fff"
+        android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录"
+            android:textSize="18sp"
+            android:textColor="#7A7A7A"/>
+    </android.support.v7.widget.Toolbar>
     <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
@@ -17,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ScrollView
         android:id="@+id/login_form"
@@ -33,44 +44,123 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-            <AutoCompleteTextView
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"/>
-
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="40dp"
+             android:background="@mipmap/alertview_custom_left_un"
+             android:gravity="center_vertical">
+             <ImageView
+                 android:id="@+id/login_user_iv"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:paddingLeft="5dp"
+                 android:src="@mipmap/login_user_icon"/>
+             <ImageView
+                 android:id="@+id/login_stoke_line"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginLeft="10dp"
+                 android:layout_toRightOf="@+id/login_user_iv"
+                 android:src="@mipmap/login_stoke_line"/>
+             <AutoCompleteTextView
+                 android:layout_marginLeft="5dp"
+                 android:layout_toRightOf="@+id/login_stoke_line"
+                 android:id="@+id/email"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:hint="手机号"
+                 android:textSize="15sp"
+                 android:inputType="textEmailAddress" />
+         </RelativeLayout>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"/>
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:background="@mipmap/alertview_custom_left_un"
+    android:gravity="center_vertical">
+    <ImageView
+        android:paddingLeft="5dp"
+        android:id="@+id/login_pass_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@mipmap/login_pass_icon"/>
+    <ImageView
+        android:id="@+id/pass_stoke_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/login_stoke_line"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/login_pass_iv"/>
+    android:layout_toRightOf="@+id/login_pass_iv"/>
+    <EditText
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/pass_stoke_line"
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="密码"
+        android:textSize="15sp"
+        android:inputType="textPassword" />
+</RelativeLayout>
             </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginTop="140dp"
+                android:text="登录"
+                android:background="@mipmap/alertview_custom_right_un"
+                android:textStyle="bold" />
+            <Button
+                android:id="@+id/email_new_user_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold"/>
+                android:layout_marginTop="10dp"
+                android:text="新用户注册"
+                android:textColor="#ff0000"
+                android:textStyle="bold" />
+            android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@mipmap/login_dotted_line"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="第三方账号登录"/>
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@mipmap/login_dotted_line"/>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:src="@mipmap/login_weixin_btn_un"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="微信"/>
 
         </LinearLayout>
     </ScrollView>
