--- a/app/src/main/res/layout/tab_mine_layout.xml
+++ b/app/src/main/res/layout/tab_mine_layout.xml
@@ -62,7 +62,7 @@
                     android:text="全部订单"
                     android:textSize="15sp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="1dp"
                     android:layout_toRightOf="@id/me_iv_01_id"/>
                 <ImageView
                     android:layout_alignParentRight="true"
@@ -205,11 +205,13 @@
             android:background="#F1F2F4"
             />
         <RelativeLayout
+            android:id="@+id/mine_setting"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical">
             <ImageView
                 android:id="@+id/me_iv_02_id"
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/kimagel_setting"
@@ -220,7 +222,6 @@
                 android:text="设置"
                 android:textSize="15sp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@id/me_iv_02_id"/>
             <ImageView
                 android:layout_alignParentRight="true"
