--- a/app/src/main/res/layout/activity_mine__setting_.xml
+++ b/app/src/main/res/layout/activity_mine__setting_.xml
@@ -69,7 +69,7 @@
 
             android:gravity="center_vertical">
             <ImageView
-                android:id="@+id/me_iv_01_id"
+                android:id="@+id/me_iv_02_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
@@ -82,7 +82,7 @@
                 android:textSize="15sp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="4dp"
-                android:layout_toRightOf="@id/me_iv_01_id"/>
+                android:layout_toRightOf="@id/me_iv_02_id"/>
             <ImageView
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
@@ -99,7 +99,7 @@
             />//间隔宽线
         <ListView
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_height="203dp"
             android:id="@+id/me_lv_03">
         </ListView>
         <TextView
@@ -120,6 +120,11 @@
                 android:textSize="20sp"
                />
         </RelativeLayout>//退出登录
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="95dp"
+            android:background="#F1F2F4"
+            />//间隔宽线
 
     </LinearLayout>
 </ScrollView>
