--- a/app/src/main/res/layout/tab_mine_layout.xml
+++ b/app/src/main/res/layout/tab_mine_layout.xml
@@ -228,7 +228,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/msgc_ic_arrow"
+                android:src="@mipmap/yuike_settings_indicator_un"
                 android:layout_marginTop="5dp"/>
         </RelativeLayout>
     </LinearLayout>
