--- a/app/src/main/res/layout/tab_cart_layout.xml
+++ b/app/src/main/res/layout/tab_cart_layout.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/car_toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="购物车"
-        android:textSize="50sp"
-        />
+        android:title="购物车"
+        android:background="#fff">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="购物车"
+                android:textSize="23sp"
+                android:textColor="#7A7A7A"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
