陈婧---购物车界面

--- a/app/src/main/res/layout/tab_cart_layout.xml
+++ b/app/src/main/res/layout/tab_cart_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
     <android.support.v7.widget.Toolbar
         android:id="@+id/car_toolbar"
         android:layout_width="match_parent"
@@ -23,5 +24,52 @@
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/line1"
+            android:layout_width="60dp"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/darker_gray"
+            />
+        <TextView
+            android:id="@+id/meili"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="美丽衣橱商品"
+            android:layout_toRightOf="@+id/line1"
+            android:paddingLeft="20dp"/>
+        <TextView
+            android:layout_toRightOf="@+id/meili"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/line2"
+            android:layout_width="60dp"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/darker_gray"
+            />
+    </RelativeLayout>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1"
+       android:gravity="center"
+       android:orientation="vertical">
+       <ImageView
+           android:layout_marginTop="100dp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:src="@mipmap/shop_cart_empty"
+           android:layout_gravity="center"/>
+       <TextView
+           android:layout_marginTop="30dp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="登录才可以查看购物车哦~"
+           android:textSize="20sp"/>
+   </LinearLayout>
 
 </LinearLayout>
