--- a/app/src/main/res/layout/tab_mine_layout.xml
+++ b/app/src/main/res/layout/tab_mine_layout.xml
@@ -83,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:onClick="onClick"
+                android:id="@+id/me_rl_01"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
@@ -102,7 +102,7 @@
                     android:text="待付款"/>
             </RelativeLayout>
             <RelativeLayout
-                android:onClick="onClick"
+                android:id="@+id/me_rl_02"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -121,7 +121,7 @@
                     android:text="待发货"/>
             </RelativeLayout>
             <RelativeLayout
-                android:onClick="onClick"
+                android:id="@+id/me_rl_03"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -140,7 +140,7 @@
                     android:text="待收货"/>
             </RelativeLayout>
             <RelativeLayout
-                android:onClick="onClick"
+                android:id="@+id/me_rl_04"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -159,7 +159,7 @@
                     android:text="已收货"/>
             </RelativeLayout>
             <RelativeLayout
-                android:onClick="onClick"
+                android:id="@+id/me_rl_05"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
