--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -4,36 +4,132 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tl_id"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        app:tabIndicatorColor="@android:color/holo_red_light"
-        app:tabIndicatorHeight="3dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@android:color/holo_red_light"
-        app:tabTextColor="@android:color/darker_gray">
 
-    </android.support.design.widget.TabLayout>
-    <ImageView
-        android:layout_width="40dp"
-        android:background="@android:color/white"
-        android:layout_height="match_parent"
-        android:src="@mipmap/delivery_more_un"/>
-</LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/ll_hor_tab_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tl_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                app:tabIndicatorColor="@android:color/holo_red_light"
+                app:tabIndicatorHeight="3dp"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="@android:color/holo_red_light"
+                app:tabTextColor="@android:color/darker_gray">
+
+            </android.support.design.widget.TabLayout>
+
+            <ImageView
+                android:id="@+id/iv_down_id"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:src="@mipmap/delivery_more_un" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_ver_tab_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="选择分类" />
+
+                <ImageView
+                    android:id="@+id/iv_top_id"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:src="@mipmap/delivery_moretop_un" />
+            </LinearLayout>
+
+            <GridView
+                android:id="@+id/tb_gv_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:horizontalSpacing="10dp"
+                android:numColumns="4"
+                android:verticalSpacing="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="推荐" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="女装" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="推荐" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="女装" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="推荐" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="女装" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="推荐" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/yuike_page_edit_barbg"
+                    android:text="女装" />
+
+            </GridView>
+
+
+        </LinearLayout>
+
+
+    </FrameLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/home_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-    </android.support.v4.view.ViewPager>
+        android:layout_weight="1"></android.support.v4.view.ViewPager>
 
 </LinearLayout>
