--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -13,7 +13,8 @@
             android:id="@+id/ll_hor_tab_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tl_id"
@@ -41,7 +42,8 @@
             android:id="@+id/ll_ver_tab_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
