--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -4,6 +4,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/car_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:title="美丽衣橱"
+        android:background="#f00">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/mili"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/delivery_titlebar_logo"/>
+        <RelativeLayout
+            android:id="@+id/search_bar"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="35dp"
+            android:background="#D00104"
+            android:layout_toRightOf="@+id/mili"
+            android:gravity="center_vertical">
+            <ImageView
+                android:id="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/delivery_titlebar_searchsub"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_toRightOf="@+id/search"
+                android:text="在602411款商品中搜索"/>
+        </RelativeLayout>
+<ImageView
+    android:id="@+id/message_bar"
+    android:layout_width="0dp"
+    android:layout_weight="1"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_alignParentRight="true"
+    android:layout_toRightOf="@+id/search_bar"
+    android:src="@drawable/delivery_titlebar_message"
+   />
+       </LinearLayout>
+    </android.support.v7.widget.Toolbar>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
