--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.beautydress.Activity.MessageActivity">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/setting_toolbar"
+        android:id="@+id/message_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="消息中心"
