--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -7,15 +7,76 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/ll_hor_tab_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/car_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="#f00"
+                android:title="美丽衣橱">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/mili"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="2"
+                        android:src="@drawable/delivery_titlebar_logo" />
+
+                    <RelativeLayout
+                        android:id="@+id/search_bar"
+                        android:layout_width="0dp"
+                        android:layout_height="35dp"
+                        android:layout_toRightOf="@+id/mili"
+                        android:layout_weight="5"
+                        android:background="#D00104"
+                        android:gravity="center_vertical">
+
+                        <ImageView
+                            android:id="@+id/search"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="3dp"
+                            android:src="@drawable/delivery_titlebar_searchsub" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="3dp"
+                            android:layout_toRightOf="@+id/search"
+                            android:text="在602411款商品中搜索" />
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:id="@+id/message_bar"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@+id/search_bar"
+                        android:layout_weight="1"
+                        android:src="@drawable/delivery_titlebar_message" />
+                </LinearLayout>
+            </android.support.v7.widget.Toolbar>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tl_id"
@@ -28,73 +89,6 @@
                 app:tabMode="scrollable"
                 app:tabSelectedTextColor="@android:color/holo_red_light"
                 app:tabTextColor="@android:color/darker_gray">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/car_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:title="美丽衣橱"
-        android:background="#f00">
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/mili"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/delivery_titlebar_logo"/>
-        <RelativeLayout
-            android:id="@+id/search_bar"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_height="35dp"
-            android:background="#D00104"
-            android:layout_toRightOf="@+id/mili"
-            android:gravity="center_vertical">
-            <ImageView
-                android:id="@+id/search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/delivery_titlebar_searchsub"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="3dp"
-                android:layout_toRightOf="@+id/search"
-                android:text="在602411款商品中搜索"/>
-        </RelativeLayout>
-<ImageView
-    android:id="@+id/message_bar"
-    android:layout_width="0dp"
-    android:layout_weight="1"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_alignParentRight="true"
-    android:layout_toRightOf="@+id/search_bar"
-    android:src="@drawable/delivery_titlebar_message"
-   />
-       </LinearLayout>
-    </android.support.v7.widget.Toolbar>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tl_id"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        app:tabIndicatorColor="@android:color/holo_red_light"
-        app:tabIndicatorHeight="3dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@android:color/holo_red_light"
-        app:tabTextColor="@android:color/darker_gray">
 
             </android.support.design.widget.TabLayout>
 
@@ -110,33 +104,31 @@
             android:id="@+id/ll_ver_tab_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="invisible"
-            android:background="@android:color/white"
             android:layout_marginTop="3dp"
-            >
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:visibility="invisible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-               >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="选择分类"
-                    android:textSize="16sp"
                     android:gravity="center_vertical"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:text="选择分类"
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/iv_top_id"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="3dp"
                     android:background="@android:color/white"
-                    android:src="@mipmap/delivery_moretop_un"
-                   android:layout_alignParentRight="true"
-                    android:layout_marginRight="3dp"/>
+                    android:src="@mipmap/delivery_moretop_un" />
             </RelativeLayout>
 
             <GridView
@@ -144,11 +136,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
+                android:gravity="center"
                 android:horizontalSpacing="10dp"
                 android:numColumns="4"
-                android:verticalSpacing="5dp"
-                android:gravity="center">
-            </GridView>
+                android:verticalSpacing="5dp"></GridView>
 
 
         </LinearLayout>
