--- a/app/src/main/res/layout/women_dress_layout.xml
+++ b/app/src/main/res/layout/women_dress_layout.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_height"
         android:gravity="center_vertical"
@@ -32,12 +34,12 @@
             android:background="@android:color/darker_gray" />
     </LinearLayout>
 
-    <LinearLayout
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <GridView
+        <com.example.beautydress.view.MyGirdView
             android:id="@+id/wd_gv2_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -46,6 +48,8 @@
             android:numColumns="2"
             android:verticalSpacing="10dp">
 
-        </GridView>
+        </com.example.beautydress.view.MyGirdView>
     </LinearLayout>
+
+
 </LinearLayout>
