--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -143,7 +143,7 @@
                 android:verticalSpacing="5dp"></GridView>
 
 
-        </LinearLayout>
+5        </LinearLayout>
 
 
     </FrameLayout>
