--- a/app/src/main/res/layout/tab_mine_layout.xml
+++ b/app/src/main/res/layout/tab_mine_layout.xml
@@ -3,6 +3,7 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fullScroll"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
