--- a/app/src/main/res/layout/activity_guide_pager.xml
+++ b/app/src/main/res/layout/activity_guide_pager.xml
@@ -3,14 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Activity.GuidePagerActivity">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_guide_id"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@mipmap/welcome"
+        />
 </RelativeLayout>
