--- a/app/src/main/res/layout/jingxuan_simple_item_layout.xml
+++ b/app/src/main/res/layout/jingxuan_simple_item_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/test1" />
+        android:src="@mipmap/yuike_cartoon_pitiful" />
     <TextView
         android:id="@+id/jx_item_title_id"
         android:layout_width="match_parent"
